third_party/move/move-compiler-v2/tests/ability-checker/loop_abort.exp

Diagnostics:
error: cannot drop
   ┌─ tests/ability-checker/loop_abort.move:11:13
   │
11 │         let _x = Impotent {};
   │             ^^
